--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,17 @@
-.flex-father {
+body {
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .flex-father {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -11,7 +24,7 @@
           justify-content: center;
 }
 
-.flex-father .flex-child {
+body .flex-father .flex-child {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -24,29 +37,29 @@
   font-family: 'Lexend Deca', sans-serif;
 }
 
-.flex-father .flex-child .car-icon {
+body .flex-father .flex-child .car-icon {
   margin-top: 0px;
 }
 
-.flex-father .flex-child .car-icon .car-icon-img {
+body .flex-father .flex-child .car-icon .car-icon-img {
   margin-bottom: 20px;
 }
 
-.flex-father .flex-child .car-title {
+body .flex-father .flex-child .car-title {
   font-family: 'Big Shoulders Display', cursive;
   color: #FFF;
   font-size: 40px;
   padding: 20px 20px 20px 0px;
 }
 
-.flex-father .flex-child .car-text {
+body .flex-father .flex-child .car-text {
   color: #fff;
   font-size: 15px;
   line-height: 25px;
   padding-bottom: 50px;
 }
 
-.flex-father .flex-child .car-button a {
+body .flex-father .flex-child .car-button a {
   background-color: #fff;
   display: inline-block;
   width: 50%;
@@ -56,27 +69,45 @@
   padding: 15px;
 }
 
-.flex-father .car-Sedan {
+body .flex-father .car-Sedan {
   background-color: #e38826;
 }
 
-.flex-father .car-Sedan .car-button a {
+body .flex-father .car-Sedan .car-button a {
   color: #e38826;
 }
 
-.flex-father .car-Suv {
+body .flex-father .car-Suv {
   background-color: #006970;
 }
 
-.flex-father .car-Suv .car-button a {
+body .flex-father .car-Suv .car-button a {
   color: #006970;
 }
 
-.flex-father .car-Luxury {
+body .flex-father .car-Luxury {
   background-color: #004241;
 }
 
-.flex-father .car-Luxury .car-button a {
+body .flex-father .car-Luxury .car-button a {
   color: #004241;
+}
+
+@media screen and (max-width: 866px) {
+  body {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  body .flex-father {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+  }
+  body .flex-father .flex-child {
+    width: 90%;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
